--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
     Copyright &copy; {{ site.time | date: '%Y' }}. {{ site.domain }}.
   </span>
   <span class="footer-copyright-text float-right">
-    Powered by <a href="https://jekyllrb.com/">Jekyll</a>
+    Powered by <a href="https://jekyllrb.com/">Jekyll</a> <a href="https://github.com/ghosind/Jekyll-Paper-Github">Paper</a>
   </span>
 </div>
